# crumbyColouring

./: CMakeLists.txt  PARAMETERS.h  README.md  checkCrumbyColouring.cpp  checkCrumbyColouring.h  graphLoader.cpp  graphLoader.h  naiveCrumbyColouring.cpp
.github/workflows/: cmake-single-platform.yml
include/: checkCrumbyColouring.h  graphLoader.h  naiveCrumbyColouring.h  prunedCrumbyColouring.h
src/: CMakeLists.txt  checkEqualCount.cpp  naiveCount.cpp  naiveCrumbyColouring.cpp  naiveMain.cpp  naiveSearch.cpp  prunedCount.cpp  prunedCrumbyColouring.cpp  prunedMain.cpp  prunedSearch.cpp
src/checker/: CMakeLists.txt  checkCrumbyColouring.cpp
src/graphLoader/: CMakeLists.txt  graphLoader.cpp
src/naiveCrumbyColouring/: CMakeLists.txt  naiveCrumbyColouring.cpp
src/prunedCrumbyColouring/: CMakeLists.txt  prunedCrumbyColouring.cpp
tests/: CMakeLists.txt  prunedTests.cpp
